--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.21.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.7.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
